# fashion-mnist-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.dvc/: config
configs/: base.yaml
deploy/triton/: client_http.py  make_model_repo.py  run_triton.ps1  run_triton_cpu.ps1
fashion_mnist_classifier/: commands.py  data.py  data_module.py  export_onnx.py  infer.py  lightning_module.py  lit_module.py  model.py  train.py  utils.py
