[project]
name = "fashion-mnist-classifier"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "kosenko.in@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "lightning (>=2.6.0,<3.0.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "pytorch-lightning (>=2.6.0,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "torch (>=2.9.1,<3.0.0)",
    "dvc (>=3.65.0,<4.0.0)",
    "mlflow (>=3.8.1,<4.0.0)",
    "fire (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
